--- a/server/public/css/styles.css
+++ b/server/public/css/styles.css
@@ -16,17 +16,33 @@ body {
     background-image: url('../Gradient_builder_2.jpeg');
 }
 
-.btn-secondary{
+.btn-secondary:not(.delete){
     opacity: .4;
     text-decoration: line-through;
 }
+
+
 
 .btn-primary{
     background-color: #ffffff94;
     border-color: #ffffff94;
     color: black;
-    filter: drop-shadow(15px 15px 15px black);
+    filter: drop-shadow(10px 10px 15px gray);
 }
 .btn-primary:not(.delete):hover{
     text-decoration: line-through;
 }
+
+footer {
+    padding-top: 200px;
+    color: whitesmoke;
+}
+
+h1 {
+    align-items: center;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    color: whitesmoke;
+    font-family: Apple Chancery, cursive;
+}
+
