--- a/server/public/css/styles.css
+++ b/server/public/css/styles.css
@@ -13,7 +13,7 @@ button {
 }
 
 body {
-    background-image: url('../Gradient_builder_2.jpeg');
+    background-image: url('../images/Gradient_builder_2.jpeg');
 }
 
 .btn-secondary:not(.delete){
